--- a/sections/carousel-two-column.liquid
+++ b/sections/carousel-two-column.liquid
@@ -28,6 +28,12 @@
     assign show_indicators = section.settings.show_indicators
     assign show_arrows = section.settings.show_arrows
     assign hide_on_mobile = section.settings.hide_on_mobile
+    
+    # Get typography settings from theme
+    assign heading_font_size = settings.heading_font_size | default: 36
+    assign heading_line_height = settings.heading_line_height | default: 1.2
+    assign body_font_size = settings.body_font_size | default: 16
+    assign body_line_height = settings.body_line_height | default: 1.6
   -%}
   
   <style>
@@ -97,7 +103,8 @@
       margin-top: 0;
       margin-bottom: 1rem;
       font-weight: 600;
-      line-height: 1.2;
+      font-size: {{ heading_font_size }}px !important;
+      line-height: {{ heading_line_height }} !important;
     }
     
     .carousel-two-column-subheading {
@@ -252,13 +259,13 @@
       }
     }
     
-    /* Content Styling (matching two-column-body) */
+    /* Content Styling - Typography from theme settings */
     .carousel-two-column-description {
       color: #333333 !important;
-      font-size: 20px !important;
+      font-size: {{ body_font_size }}px !important;
       font-weight: 400 !important;
       font-family: 'MerriweatherBody', 'Merriweather', Georgia, serif !important;
-      line-height: 2.6 !important;
+      line-height: {{ body_line_height }} !important;
       letter-spacing: 0px !important;
       word-spacing: 0px !important;
       word-break: normal !important;
@@ -270,10 +277,10 @@
     .carousel-two-column-description p {
       margin-bottom: 1rem;
       color: #333333 !important;
-      font-size: 20px !important;
+      font-size: {{ body_font_size }}px !important;
       font-weight: 400 !important;
       font-family: 'MerriweatherBody', 'Merriweather', Georgia, serif !important;
-      line-height: 2.6 !important;
+      line-height: {{ body_line_height }} !important;
       letter-spacing: 0px !important;
       word-spacing: 0px !important;
       word-break: normal !important;
@@ -284,10 +291,10 @@
     
     .carousel-two-column-description *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
       color: #333333 !important;
-      font-size: 20px !important;
+      font-size: {{ body_font_size }}px !important;
       font-weight: 400 !important;
       font-family: 'MerriweatherBody', 'Merriweather', Georgia, serif !important;
-      line-height: 2.6 !important;
+      line-height: {{ body_line_height }} !important;
       letter-spacing: 0px !important;
       word-spacing: 0px !important;
       word-break: normal !important;
@@ -300,10 +307,10 @@
       margin-bottom: 1rem;
       padding-left: 1.5rem;
       color: #333333 !important;
-      font-size: 20px !important;
+      font-size: {{ body_font_size }}px !important;
       font-weight: 400 !important;
       font-family: 'MerriweatherBody', 'Merriweather', Georgia, serif !important;
-      line-height: 2.6 !important;
+      line-height: {{ body_line_height }} !important;
       letter-spacing: 0px !important;
       word-spacing: 0px !important;
     }
@@ -311,10 +318,10 @@
     .carousel-two-column-description li {
       margin-bottom: 0.5rem;
       color: #333333 !important;
-      font-size: 20px !important;
+      font-size: {{ body_font_size }}px !important;
       font-weight: 400 !important;
       font-family: 'MerriweatherBody', 'Merriweather', Georgia, serif !important;
-      line-height: 2.6 !important;
+      line-height: {{ body_line_height }} !important;
       letter-spacing: 0px !important;
       word-spacing: 0px !important;
     }
