Fix: Shorten section name to meet Shopify 25 character limit

--- a/sections/product-flip-carousel-mobile.liquid
+++ b/sections/product-flip-carousel-mobile.liquid
@@ -449,9 +449,9 @@
     }
   </script>
   
-  {% schema %}
+{% schema %}
   {
-    "name": "Product Flip Carousel Mobile",
+    "name": "Product Flip Mobile",
     "tag": "section",
     "class": "section-product-flip-carousel-mobile",
     "settings": [
@@ -645,5 +645,4 @@
       }
     ]
   }
-  {% endschema %}
-
+{% endschema %}
